# gemini

./: Cargo.toml  README.md  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: rust.yml
benches/: commit_bench.rs  coreops_bench.rs  msm_bench.rs  proofs_bench.rs  verifier_bench.rs
doc/: katex-header.html
examples/: pc.rs  psnark.rs  snark.rs  verifier.rs
src/: circuit.rs  errors.rs  lib.rs  misc.rs  transcript.rs
src/docs/: lib_docs.md  multivariate_protocol.md  old_docs.md  old_univariate_docs.md  univariate_protocol.md
src/entry_product/: mod.rs
src/entry_product/streams/: mod.rs  product_stream.rs  rrot_stream.rs
src/entryproduct/: elastic_prover.rs  mod.rs  tests.rs  time_prover.rs
src/entryproduct/streams/: mod.rs  rrot_stream.rs
src/grandproduct/: elastic_prover.rs  mod.rs  time_prover.rs
src/grandproduct/streams/: mod.rs  product_stream.rs
src/herring/: ipa.rs  mod.rs  module.rs  proof.rs  prover.rs  snark.rs  space_prover.rs  streams.rs  subclaim.rs  tests.rs  time_prover.rs
src/iterable/: dummy.rs  mmap.rs  mod.rs  slice.rs
src/kzg/: mod.rs  space.rs  tests.rs  time.rs
src/kzg/msm/: mod.rs  stream_pippenger.rs  variable_base.rs
src/memcheck/streams/: mod.rs  read_stream.rs
src/multikzg/: division_stream.rs  mod.rs  space.rs  time.rs
src/multikzg/msm/: stream_pippenger.rs  variable_base.rs
src/plookup/: mod.rs  tests.rs  time_prover.rs
src/plookup/streams/: mod.rs  set_stream.rs  sorted_stream.rs  subset_stream.rs
src/psnark/: constraint_system.rs  elastic_prover.rs  mod.rs  proof.rs  space_prover.rs  tests.rs  time_prover.rs  verifier.rs
src/psnark/streams/: algebraic_hash.rs  hadamard_stream.rs  index_stream.rs  intofield_stream.rs  line_stream.rs  lookup_stream.rs  merge_stream.rs  mod.rs  tensor_stream.rs  val_stream.rs
src/psnark/streams/entry_product/: mod.rs  product_stream.rs
src/psnark/streams/memcheck/: init_stream.rs  mod.rs
src/psnark/streams/plookup/: mod.rs  set_stream.rs  sorted_stream.rs  subset_stream.rs
src/snark/: elastic_prover.rs  mod.rs  streams.rs  tests.rs  time_prover.rs  verifier.rs
src/stream/: dummy.rs  mod.rs  slice.rs
src/subprotocols/: mod.rs
src/subprotocols/entryproduct/: elastic_prover.rs  mod.rs  tests.rs  time_prover.rs
src/subprotocols/entryproduct/streams/: mod.rs  product_stream.rs  rrot_stream.rs
src/subprotocols/memcheck/: mod.rs
src/subprotocols/memcheck/streams/: audit_stream.rs  write_stream.rs
src/subprotocols/plookup/: tests.rs  time_prover.rs
src/subprotocols/plookup/streams/: mod.rs  set_stream.rs  sorted_stream.rs  subset_stream.rs
src/subprotocols/sumcheck/: elastic_prover.rs  mod.rs  proof.rs  prover.rs  space_prover.rs  streams.rs  subclaim.rs  tests.rs  time_prover.rs
src/subprotocols/tensorcheck/: mod.rs  streams.rs  tests.rs
src/sumcheck/: elastic_prover.rs  mod.rs  proof.rs  prover.rs  space_prover.rs  streams.rs  subclaim.rs  tests.rs  time_prover.rs
src/tensorcheck/: mod.rs  streams.rs  tests.rs
