[package]
name = "ark-gemini"
version = "0.0.1"
license = "MIT"
authors = [
    "Jonathan Bootle <jbootle77@gmail.com>",
    "Alessandro Chiesa <alexch@berkeley.edu>",
    "Yuncong Hu <huyuncongh@gmail.com>",
    "Michele Orrù <michele.orru@berkeley.edu>",
    "arkworks contributors"
]
categories = ["cryptography"]
description = "A library for the elastic arguments of knowledge."
keywords = ["cryptography", "polynomial commitments", "SNARK"]
edition = "2021"


[[bench]]
harness = false
name = "coreops_bench"

[[bench]]
harness = false
name = "proofs_bench"

[[bench]]
harness = false
name = "commit_bench"

[[bench]]
harness = false
name = "msm_bench"

[[bench]]
harness = false
name = "verifier_bench"

[patch.crates-io]
ark-std = {git = "https://github.com/arkworks-rs/utils"}
ark-ec = {git = "https://github.com/arkworks-rs/algebra"}
ark-ff = {git = "https://github.com/arkworks-rs/algebra"}
ark-test-curves = {git = "https://github.com/arkworks-rs/algebra"}
ark-serialize = {git = "https://github.com/arkworks-rs/algebra"}
ark-serialize-derive = {git = "https://github.com/arkworks-rs/algebra"}
ark-poly = {git = "https://github.com/arkworks-rs/algebra"}
ark-bls12-381 = {git = "https://github.com/arkworks-rs/algebra"}
ark-relations = {git = "https://github.com/arkworks-rs/snark"}

[dependencies]
#ark-bls12-381 = "0.4.0"
ark-ec = "0.4.0"
ark-ff = "0.4.0"
ark-poly = "0.4.0"
ark-relations = "0.4.0"
ark-serialize = {version = "0.4.0", features = ["derive"]}
ark-std ="0.4.0"
hashbrown = "0.12.0"
log = "0.4.16"
# memmap = "0.7.0"
merlin = "3.0.0"
rand = "0.8.5"
rayon = {version = "1.5", optional = true}

[target.x86_64-unknown-linux-gnu.dependencies]
procinfo = "0.4.2"
libc = "0.2.117"

[dev-dependencies]
#ark-bls12-381 = {version = "^0.4.0", default-features = false, features = ["curve"]}
clap = {version = "3.1.6", features = ["derive"]}
criterion = {version = "0.3.4", features = ["html_reports"]}
env_logger = "0.8.3"
rand_core = "0.5"
ark-test-curves = {version = "^0.4.0", features = ["bls12_381_curve", "ed_on_bls12_381"]}


[features]
default = ["asm", "parallel", "std"]
asm = ["ark-ff/asm"]
print-trace = ["ark-std/print-trace"]
parallel = [ "std", "ark-ff/parallel", "ark-poly/parallel", "ark-std/parallel", "ark-ec/parallel", "rayon"]
std = ["ark-ff/std", "ark-ec/std", "ark-poly/std", "ark-std/std", "ark-relations/std", "ark-serialize/std"]

[profile.dev]
opt-level = 3
overflow-checks = false

[profile.release]
debug=true

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "doc/katex-header.html"]
